<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/bg_img_login"
            android:contentDescription="@string/img_contentdest_signup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/Color_1"
            android:layout_marginTop="-10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/Color_1"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="TouchTargetSizeCheck"
                    android:hint="@string/et_email"
                    android:textSize="24sp"
                    android:paddingHorizontal="10dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:textColor="@color/Color_1"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    tools:ignore="TouchTargetSizeCheck"
                    android:hint="@string/et_pw"
                    android:textSize="24sp"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/Color_1"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:autofillHints="password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Color_2"
                    app:cornerRadius="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/belum_punya_akun"
                        android:linksClickable="true"
                        android:textSize="16sp"
                        android:layout_marginEnd="8dp"
                        />
                    <TextView
                        android:id="@+id/signuplink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:linksClickable="true"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbCircular"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>